--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -7,3 +7,6 @@
 <p><strong>Updated At:</strong> <%= @message.updated_at %></p>
 
 <%= link_to 'Back to Messages', messages_path %>
+<%= link_to 'Back to list', users_path %> |
+<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'New user', new_user_path %>
