--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -6,3 +6,6 @@
 <p><strong>Updated At:</strong> <%= @chat.updated_at %></p>
 
 <%= link_to 'Back to Chats', chats_path %>
+<%= link_to 'Back to list', users_path %> |
+<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'New user', new_user_path %>
