--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,6 @@
 <p><strong>Updated at:</strong> <%= @user.updated_at %></p>
 
 <%= link_to 'Back to Users', users_path %>
+<%= link_to 'Back to list', users_path %> |
+<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'New user', new_user_path %>
