--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -20,6 +20,7 @@
         <td><%= chat.created_at %></td>
         <td><%= chat.updated_at %></td>
         <td><%= link_to 'Show', chat_path(chat) %></td>
+        <td><%= link_to "Edit", edit_chat_path(chat) %></td>
       </tr>
     <% end %>
   </tbody>
