--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,6 +22,9 @@
         <td><%= user.created_at %></td>
         <td><%= user.updated_at %></td>
         <td><%= link_to 'Show', user_path(user) %></td>
+        <td><%= link_to "Edit", edit_user_path(user) %></td>
+        <th>Messages Sent</th>
+        <td><%= user.messages.count %></td>
       </tr>
     <% end %>
   </tbody>
