--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -1,24 +1,26 @@
-<%= form_with(model: chat, local: true) do |form| %>
-  <% if chat.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(chat.errors.count, "error") %> prohibited this chat from being saved:</h2>
-      <ul>
-        <% chat.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="container mt-5" style="max-width: 500px;">
+  <h1 class="mb-4 text-center">Edit Chat</h1>
+
+  <%= form_with(model: chat, local: true) do |form| %>
+    <% if chat.errors.any? %>
+      <div class="alert alert-danger">
+        <h4><%= pluralize(chat.errors.count, "error") %> prohibited this chat from being saved:</h4>
+        <ul>
+          <% chat.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="mb-3">
+      <%= form.label :receiver_id, class: "form-label" %>
+      <%= form.number_field :receiver_id, class: "form-control" %>
+    </div>
+
+    <div class="text-center">
+      <%= form.submit "Edit Chat", class: "btn btn-primary" %>
+      <%= link_to "Back to Chats", chats_path, class: "btn btn-secondary" %>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :sender_id %>
-    <%= form.number_field :sender_id %>
-  </div>
-
-  <div>
-    <%= form.label :receiver_id %>
-    <%= form.number_field :receiver_id %>
-  </div>
-
-  <%= form.submit %>
-<% end %>
+</div>
