--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,27 +1,35 @@
-<h1>Chats</h1>
+<div class="container mt-5">
+  <h1 class="mb-4 text-center">Chats</h1>
 
-<%= link_to 'Add new chat', new_chat_path %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Sender ID</th>
-      <th>Receiver ID</th>
-      <th>Created At</th>
-      <th>Updated At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @chats.each do |chat| %>
+  <table class="table table-striped table-hover">
+    <thead class="table-dark">
       <tr>
-        <td><%= chat.sender_id %></td>
-        <td><%= chat.receiver_id %></td>
-        <td><%= chat.created_at %></td>
-        <td><%= chat.updated_at %></td>
-        <td><%= link_to 'Show', chat_path(chat) %></td>
-        <td><%= link_to "Edit", edit_chat_path(chat) %></td>
+        <th>Sender</th>
+        <th>Receiver</th>
+        <th>Created At</th>
+        <th>Updated At</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @chats.each do |chat| %>
+        <tr>
+          <td><%= User.find(chat.sender_id).full_name rescue chat.sender_id %></td>
+          <td><%= User.find(chat.receiver_id).full_name rescue chat.receiver_id %></td>
+          <td><%= l(chat.created_at, format: :short) %></td>
+          <td><%= l(chat.updated_at, format: :short) %></td>
+          <td>
+            <%= link_to 'Show', chat_path(chat), class: "btn btn-sm btn-info me-1" %>
+            <% if can? :edit, chat %>
+              <%= link_to "Edit", edit_chat_path(chat), class: "btn btn-sm btn-warning" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="text-end">
+    <%= link_to 'Add new chat', new_chat_path, class: "btn btn-primary" %>
+  </div>
+</div>
