--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -1,23 +1,24 @@
-<h1>New Chat</h1>
+<div class="container mt-5" style="max-width: 500px;">
+  <h1 class="mb-4 text-center">New Chat</h1>
 
-<%= form_with model: @chat, local: true do |f| %>
-  <% if @chat.errors.any? %>
-    <ul>
-      <% @chat.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+  <%= form_with model: @chat, local: true do |f| %>
+    <% if @chat.errors.any? %>
+      <div class="alert alert-danger">
+        <ul class="mb-0">
+          <% @chat.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="mb-3">
+      <%= f.label :receiver_id, "Receiver", class: "form-label" %>
+      <%= f.select :receiver_id, options_from_collection_for_select(@users, :id, :email), {}, class: "form-select" %>
+    </div>
+
+    <div class="d-grid">
+      <%= f.submit "Create Chat", class: "btn btn-primary" %>
+    </div>
   <% end %>
-
-  <div>
-    <%= f.label :sender_id, "Sender" %>
-    <%= f.select :sender_id, options_from_collection_for_select(@users, :id, :email) %>
-  </div>
-
-  <div>
-    <%= f.label :receiver_id, "Receiver" %>
-    <%= f.select :receiver_id, options_from_collection_for_select(@users, :id, :email) %>
-  </div>
-
-  <%= f.submit "Create Chat" %>
-<% end %>
+</div>
