--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,31 +1,39 @@
-<h1>Messages</h1>
+<div class="container mt-4">
+  <h1 class="mb-4 text-center">Messages</h1>
 
-<%= link_to 'Add new message', new_message_path %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Chat ID</th>
-      <th>Sender</th>
-      <th>Receiver</th>
-      <th>Message</th>
-      <th>Created At</th>
-      <th>Updated At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @messages.each do |message| %>
+  <table class="table table-striped table-hover table-responsive">
+    <thead class="table-dark">
       <tr>
-        <td><%= message.chat_id %></td>
-        <td><%= message.sender.full_name %></td>
-        <td><%= message.receiver.full_name %></td>
-        <td><%= message.body %></td>
-        <td><%= message.created_at %></td>
-        <td><%= message.updated_at %></td>
-        <td><%= link_to 'Show', message_path(message) %></td>
-        <td><%= link_to "Edit", edit_message_path(message) %></td>
+        <th>Chat ID</th>
+        <th>Sender</th>
+        <th>Receiver</th>
+        <th>Message</th>
+        <th>Created At</th>
+        <th>Updated At</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @messages.each do |message| %>
+        <tr>
+          <td><%= message.chat_id %></td>
+          <td><%= message.sender.full_name %></td>
+          <td><%= message.receiver.full_name %></td>
+          <td><%= message.body %></td>
+          <td><%= message.created_at.strftime("%d %b %Y, %H:%M") %></td>
+          <td><%= message.updated_at.strftime("%d %b %Y, %H:%M") %></td>
+          <td>
+            <%= link_to 'Show', message_path(message), class: "btn btn-sm btn-info me-1" %>
+            <% if can? :edit, message %>
+              <%= link_to 'Edit', edit_message_path(message), class: "btn btn-sm btn-warning" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="text-end">
+    <%= link_to 'Add new message', new_message_path, class: "btn btn-primary" %>
+  </div>
+</div>
