--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,32 @@
-<h1>Users</h1>
+<div class="container mt-4">
+  <h1 class="mb-4 text-center">Users</h1>
 
-<%= link_to 'Add new user', new_user_path, class: "btn btn-primary" %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Created At</th>
-      <th>Updated At</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
+  <table class="table table-striped table-hover">
+    <thead class="table-dark">
       <tr>
-        <td><%= user.email %></td>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.created_at %></td>
-        <td><%= user.updated_at %></td>
-        <td><%= link_to 'Show', user_path(user) %></td>
-        <td><%= link_to "Edit", edit_user_path(user) %></td>
+        <th>Email</th>
+        <th>First Name</th>
+        <th>Last Name</th>
         <th>Messages Sent</th>
-        <td><%= user.messages.count %></td>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.email %></td>
+          <td><%= user.first_name %></td>
+          <td><%= user.last_name %></td>
+          <td><%= user.messages.count %></td>
+          <td>
+            <%= link_to 'Show', user_path(user), class: "btn btn-sm btn-info me-1" %>
+            <% if can? :edit, user %>
+              <%= link_to "Edit", edit_user_path(user), class: "btn btn-sm btn-warning" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+</div>
