--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,37 @@
-<h1>User Details</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">User Details</h1>
 
-<p><strong>Email:</strong> <%= @user.email %></p>
-<p><strong>Name:</strong> <%= @user.first_name %> <%= @user.last_name %></p>
-<p><strong>Created at:</strong> <%= @user.created_at %></p>
-<p><strong>Updated at:</strong> <%= @user.updated_at %></p>
+  <div class="card mb-4">
+    <div class="card-body">
+      <h3 class="card-title"><%= @user.full_name %></h3>
+      <p><strong>Email:</strong> <%= @user.email %></p>
+      <p><strong>Created at:</strong> <%= @user.created_at.strftime("%d %b %Y, %H:%M") %></p>
+      <p><strong>Updated at:</strong> <%= @user.updated_at.strftime("%d %b %Y, %H:%M") %></p>
+    </div>
+  </div>
 
-<%= link_to 'Back to Users', users_path %>
-<%= link_to 'Back to list', users_path %> |
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Chats</h2>
+      <ul class="list-group mb-4">
+        <% @user.sent_chats.each do |chat| %>
+          <li class="list-group-item">Chat con <%= chat.receiver.full_name %></li>
+        <% end %>
+        <% @user.received_chats.each do |chat| %>
+          <li class="list-group-item">Chat con <%= chat.sender.full_name %></li>
+        <% end %>
+      </ul>
+    </div>
 
-<h1><%= @user.full_name %></h1>
+    <div class="col-md-6">
+      <h2>Mensajes enviados</h2>
+      <ul class="list-group mb-4">
+        <% @user.messages.each do |msg| %>
+          <li class="list-group-item"><%= msg.body %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 
-<h2>Chats</h2>
-<ul>
-  <% @user.sent_chats.each do |chat| %>
-    <li>Chat con <%= chat.receiver.full_name %></li>
-  <% end %>
-
-  <% @user.received_chats.each do |chat| %>
-    <li>Chat con <%= chat.sender.full_name %></li>
-  <% end %>
-</ul>
-
-<h2>Mensajes enviados</h2>
-<ul>
-  <% @user.messages.each do |msg| %>
-    <li><%= msg.body %></li>
-  <% end %>
-</ul>
-
-<%= link_to "Edit", edit_user_path(@user) %>
+  <%= link_to 'Back to Users', users_path, class: "btn btn-primary" %>
+</div>
