--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">MyApp</a>
-    <div class="collapse navbar-collapse">
+    <%= link_to "MyApp", root_path, class: "navbar-brand" %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><%= link_to "Users", users_path, class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to "Chats", chats_path, class: "nav-link" %></li>
-        <li class="nav-item"><%= link_to "Messages", messages_path, class: "nav-link" %></li>
+        <% if user_signed_in? %>
+          <% if current_user.admin? %>
+            <li class="nav-item"><%= link_to "Users", users_path, class: "nav-link" %></li>
+          <% end %>
+          <li class="nav-item"><%= link_to "Chats", chats_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Messages", messages_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "My Inbox", chats_path, class: "nav-link" %></li>
+        <% end %>
+      </ul>
+
+      <ul class="navbar-nav ms-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <span class="navbar-text me-2">Signed in as <%= current_user.email %></span>
+          </li>
+          <li class="nav-item">
+            <%= button_to 'Logout', destroy_user_session_path, method: :delete, form_class: 'd-inline', class: "btn btn-outline-danger btn-sm" %>
+          </li>
+        <% else %>
+          <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-primary btn-sm me-2" %></li>
+          <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "btn btn-primary btn-sm" %></li>
+        <% end %>
       </ul>
     </div>
   </div>
